[package]
name = "handmade-hero-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System", "Win32_System_LibraryLoader", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Memory"] }